--- a/ExamenCodeAlong/Views/Shared/_Layout.cshtml
+++ b/ExamenCodeAlong/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Personeelsleden" asp-action="Index">Personeelsleden</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Projecten" asp-action="Koppelpersoneel">Koppel personeel</a>
+                        </li>
                     </ul>
                 </div>
             </div>
