--- a/ExamenCodeAlong/Views/Personeelsleden/Index.cshtml
+++ b/ExamenCodeAlong/Views/Personeelsleden/Index.cshtml
@@ -43,6 +43,10 @@
                 @Html.DisplayFor(modelItem => item.Achternaam)
             </td>
             <td>
+                @{
+                    string source = "/img/" + item.Id + ".jpg";
+                }
+                <img src="@source" alt="Afbeelding" width="100" height="100" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Vestiging.Naam)
